# aboutfx

./: .gitignore  README.md  pyproject.toml
dataset/git/: cloc.sh  git-log-json.sh  git.tar.xz
dataset/github/: github.tar.xz
src/: constants.py  fetch_github.py  gen_top500.py  plot_git.py  plot_github.py  plot_jbs.py  plot_mail.py  plot_other.py
